Patch FUNCTION_PROFILER to avoid code-scheduling botch when compiling with -mabicalls: the gcc/egcs code emits hand-scheduled code with an insn in a "jal _mcount" delayslot. But with -mabicalls, the "jal" expands into a call via $t9 and the delay-slot is already filled.

See PR#5248.